--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@ $(document).ready(function() {
 <span><strong>END</strong></span>
 <span><strong>Thanks!</strong></span>
 <a href="#page1"><span style="font-size:medium">点此回到第一页</span></a>
+<a href="https://github.com/Lizer1995/XYD"><span style="font-size:medium">XYD代码仓库</span></a>	
 <script type="text/javascript" src="js/snow.js"></script>
 <style>
 @media screen and (max-width:960px){
